20201105	Some minor refactoring of arcbios environment variables etc,
		to attempt to get emulated O2 boot-from-disk image (or cdrom
		image) to work better.
20210116	Include ASID and VPN2 in MIPS load/store misalignment
		exceptions (patch from Nick Hudson).
20210123	Adding a patch from Luchezar Georgiev for missing variant of
		rot for 88100 (immediate argument), and for missing addu_cio
		and subu_cio instructions.
		Inspired by Luchezar Georgiev's patch for subu_cio, a closer
		look at the subu borrow bit resulted in a bug fix which finally
		allows a OpenBSD/luna88k 6.8 ramdisk to boot all the way to
		userland.
20210127	Writing some ugly glue code to connect the Lance Ethernet
		device (dev_le) to the LUNA88K machine. An OpenBSD/luna88k 6.8
		ramdisk can now (barely) reach the internet using TCP/IPv4.
20210130	Writing guest OS install instructions for running OpenBSD/
		luna88k with root-on-nfs, which involves using NetBSD/pmax as
		an NFS server and OpenBSD/sgi (!) to run MAKEDEV.
20210207	Fixing a spelling mistake in the 88K fdiv.sss instruction,
		making self-compilation of [an older version of] GXemul inside
		OpenBSD/luna88k get further.
20210209	Adding keyboard support to dev_luna88k.
20210213	Implementing exception cases in 88K xmem_slow implementation.
20210214	Implementing the fdiv.dss 88K instruction.
20210215	Implementing the fsub.sss 88K instruction.

==============  RELEASE 0.6.3  ==============

20210215	Implementing the fadd.dss 88K instruction, and working a bit
		more on the exception cases in the xmem instruction.
20210220	Implementing mouse emulation support for the LUNA88K machine.
		Updating OpenBSD/sgi install instructions (6.5 -> 6.8),
		and including a screenshot of X11 running.
20210221	Handle return values from interrupted select() when checking
		for available console input. (Found when using CTRL-C on Linux
		to enter the debugger command line, and noticed that it was
		spuriously broken.)